Fix the spacing in header content

--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ ul > li {
 .hcontent {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     gap: 50px;
     margin: 0 200px;
     padding: 100px 0;
